# learn-you-a-haskell-for-the-great-good

./: .gitignore  .stack  Makefile  README.md  build.sh  clean.sh  console.sh  exercises.cabal  learn-you-a-haskell.cabal  package.yaml  report.html  run.sh  stack.yaml
.stack-work/install/x86_64-linux/7cc84608b4fc28e7a26647e9d2e1e4049916f3e6efc6e9221c6e24254895b39c/8.6.5/lib/x86_64-linux-ghc-8.6.5/exercises-0.1.0.0-9e75UC9BikVD6hDBCsHtbp/: Lib.dyn_hi  Paths_exercises.dyn_hi
.stack-work/install/x86_64-linux/7cc84608b4fc28e7a26647e9d2e1e4049916f3e6efc6e9221c6e24254895b39c/8.6.5/lib/x86_64-linux-ghc-8.6.5/exercises-0.1.0.0-C8BiQ3tlhJ8IXKp9VYxWnI/: Lib.dyn_hi
.stack-work/install/x86_64-linux/7cc84608b4fc28e7a26647e9d2e1e4049916f3e6efc6e9221c6e24254895b39c/8.6.5/pkgdb/: exercises-0.1.0.0-C8BiQ3tlhJ8IXKp9VYxWnI.conf  package.cache
another-one/: Main.hs
app/: Main.hs
chapter-1/: README.md  baby-s-function.hs  lists.hs  run.sh  triangles.hs  tribonacci.hs
chapter-3/: pattern-matching.hs  types.hs
chapter-4/: recursion.hs
chapter-5/: apply-twice.hs  chapter5.hs  curried.hs
chapter-6/: modules.hs
chapter-7/: maps.hs  modules.hs
docker/: Dockerfile
docs/: introduction.md  setup.md  starting-out.md
learn-you-a-haskell/: CHANGELOG.md  README.md  learn-you-a-haskell.cabal  stack.yaml
learn-you-a-haskell/src/: Lib.hs
learn-you-a-haskell/test/: BooleanSpec.hs  DummySpec.hs  FoldSpec.hs  HighOrderFunctionsSpec.hs  LibSpec.hs  ListComprehensionSpec.hs  ListsSpec.hs  PatternMatchingSpec.hs  RecursionSpec.hs  TuplesSpec.hs
src/: FastCopy.hs  Geometry.hs
src/Chapter1/: lists.hs
src/Chapter10/: ReversePolishNotationCalculator.hs
src/Chapter3/: types.hs
src/Chapter4/: recursion.hs
src/Chapter7/: FindEst.hs  Geometry.hs  maps.hs  modules.hs
src/Chapter9/: Capslocker.hs  ConvertToCaps.hs  ForM.hs  Forever.hs  HelloWorld.hs  IsPalindrome.hs  PutChr.hs  Randomness.hs  ReadFile.hs  Reverse.hs  Sequence.hs  ShorterLines.hs
src/Geometry/: Cube.hs  Cuboid.hs  Rectangle.hs  Shapes.hs  Sizes.hs  Sphere.hs
src/chapter-1/: baby-s-function.hs
src/chapter-3/: pattern-matching.hs
test/: DifferenceListSpec.hs  DummySpec.hs  FindEstSpec.hs  FoldSpec.hs  FoldableSpec.hs  FunctionComposition.hs  FunctionCompositionSpec.hs  GadtSpec.hs  GeometrySpec.hs  ListComprehensionSpec.hs  ListsSpec.hs  ModuleSpec.hs  OwnTypesSpec.hs  PalindromeSpec.hs  PatternMatchingSpec.hs  RPNSpec.hs  Record2.hs  RecordSpec.hs  SystemModuleSpec.hs  TreeSpec.hs  TypeAliasSpec.hs  TypeParametersSpec.hs  TypeSynonymsSpec.hs  ZipperSpec.hs
test/Applicative/: ApplicativeSpec.hs  LiftingSpec.hs
test/Chapter10/: ReversePolishNotationCalculatorSpec.hs
test/Chapter7/: GeometrySpec.hs  SetSpec.hs
test/Chapter8/: BinaryTreeSpec.hs  EquatableSpec.hs  FunctorSpec.hs  OwnTypesSpec.hs  Recursive2.hs  RecursiveSpec.hs  TofuSpec.hs  YesNoSpec.hs
test/Chapter9/: Exceptions.hs  ExceptionsSpec.hs  RandomnessSpec.hs  ReverseSpec.hs
test/Functors/: FunctorSpec.hs
test/IO/: IOSpec.hs  RandomSpec.hs
test/Monads/: Birds2Spec.hs  BirdsSpec.hs  ComposingSpec.hs  FailuresSpec.hs  KnightSpec.hs  LawsSpec.hs  MockingMonadSpec.hs  MockingSpec.hs  MonadicFunctionsSpec.hs  ProbabilitySpec.hs  RandomStateSpec.hs  ReaderSpec.hs  SafeRPNSpec.hs  StackStateSpec.hs  StandardMonadsSpec.hs  StateSpec.hs  SystemMonadsSpec.hs  WriterBanditsSpec.hs  WriterByTheBookSpec.hs  WriterSpec.hs  WriterUsingStandardSpec.hs
test/Monoids/: MonoidSpec.hs
test/Types/: ListSpec.hs  LockerSpec.hs  TrafficLightSpec.hs  TreeSpec.hs  YesNoSpec.hs
