name:                learn-you-a-haskell
version:             0.1.0.0
synopsis:            Short description of your package
homepage:            https://github.com/githubuser/learn-you-a-haskell#readme
license:             BSD3
license-file:        LICENSE
author:              Author name here
maintainer:          example@example.com
copyright:           2022 Author name here
category:            Web
build-type:          Simple
extra-source-files:  README.md
                     CHANGELOG.md
cabal-version:       >=1.10

-- To avoid duplicated efforts in documentation and dealing with the
-- complications of embedding Haddock markup inside cabal files, it is
-- common to point users to the README.md file.
description:         Please see the README on Github at <https://github.com/githubuser/learn-you-a-haskell#readme>

executable learn-you-a-haskell
  main-is:             Main.hs
  hs-source-dirs:      app
  build-depends:       base >= 4.7 && < 5
                     , containers
                     , learn-you-a-haskell
  default-language:    Haskell2010

library
  hs-source-dirs:      src
  exposed-modules:
     Lib
     Geometry.Sphere
     Geometry.Cube
     Geometry.Sizes
     Geometry.Shapes
     FastCopy
  build-depends:       base >= 4.7 && < 5
                     , bytestring
                     , directory
  default-language:    Haskell2010
  ghc-options:         -Wall
                       -Wcompat
                       -Widentities
                       -Wincomplete-record-updates
                       -Wincomplete-uni-patterns
                       -Wmissing-export-lists
                       -Wmissing-home-modules
                       -Wpartial-fields
                       -Wredundant-constraints

test-suite spec
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test, app
  main-is:             Spec.hs
  build-depends:       base
                     , hspec==2.*
                     , learn-you-a-haskell
                     , containers
                     , random
  default-language:    Haskell2010
  ghc-options:         -Wall
                       -Wcompat
                       -Widentities
                       -Wincomplete-record-updates
                       -Wincomplete-uni-patterns
                       -Wmissing-home-modules
                       -Wpartial-fields
                       -Wredundant-constraints
                       -threaded
                       -rtsopts
                       -with-rtsopts=-N
                        -XStandaloneDeriving
  build-tool-depends: hspec-discover:hspec-discover == 2.*
  other-modules:
    DummySpec
    BooleanSpec
    LibSpec
    ListsSpec
    ListComprehensionSpec
    TuplesSpec
    PatternMatchingSpec
    RecursionSpec
    HighOrderFunctionsSpec
    FoldSpec
    FunctionCompositionSpec
    ModuleSpec
    SystemModuleSpec
    GeometrySpec
    OwnTypesSpec
    RecordSpec
    Record2
    TypeParametersSpec
    GadtSpec
    TypeSynonymsSpec
    Types.LockerSpec
    Types.ListSpec
    Types.TreeSpec
    Types.TrafficLightSpec
    Types.YesNoSpec
    Functors.FunctorSpec
    IO.IOSpec
    IO.RandomSpec
    RPNSpec
    Applicative.ApplicativeSpec
    Applicative.LiftingSpec
    PalindromeSpec
source-repository head
  type:     git
  location: https://github.com/githubuser/learn-you-a-haskell
